--- a/sutra-frontend/package.json
+++ b/sutra-frontend/package.json
@@ -14,12 +14,19 @@
     "@heroicons/react": "^1.0.6",
     "@heroicons/vue": "^2.2.0",
     "@iconify/icons-heroicons-solid": "^1.2.6",
+    "axios": "^1.7.9",
+    "lucide-react": "^0.468.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.2",
-    "react-tsparticles": "^2.12.2"
+    "react-tsparticles": "^2.12.2",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
