--- a/sutra-frontend/package.json
+++ b/sutra-frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "@heroicons/vue": "^2.2.0",
     "@iconify/icons-heroicons-solid": "^1.2.6",
+    "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.468.0",
     "prismjs": "^1.29.0",
