--- a/sutra-frontend/package.json
+++ b/sutra-frontend/package.json
@@ -15,7 +15,9 @@
     "@heroicons/vue": "^2.2.0",
     "@iconify/icons-heroicons-solid": "^1.2.6",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^1.7.9",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.468.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
